# Icaro

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  setup.sh
lib_nrf24/: rcv_test.py  send.py  snd_test.py
src/: acc.py  main.cpp  recive_tester.py  servo_tester.py
